kubernetes/keycloak/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    kubernetes.io/metadata.name: keycloak
    app.kubernetes.io/instance: keycloak
